added link to home site

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="nav">
    
 <ul>
-<li><a href="index.htm">Home</a> //</li>
+<li><a href="http://baibrisc.github.io/">Home</a> //</li>
 <li>About Me //</li> 
 <li><a href="work.html">Projects</a> //</li> 
 </ul>
