--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <link rel="stylesheet" href="css/reset.css" type="text/css"/>
 <link rel="stylesheet" href="css/style.css" type="text/css"/>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-<link rel="shortcut icon" href="favicon.ico"/>
 <style type="text/css" media="screen"></style>
 <script type="text/javascript" src="js/cufon-yui.js"></script>
 <script type="text/javascript" src="Bello_Pro_400.font.js"></script>
@@ -103,7 +102,7 @@
 <ul>
 <li><a href="http://baibrisc.github.io/">Home</a> // </li> 
 <li><a href="http://baibrisc.github.io/about-me/">About Me</a> // </li> 
-<li><a href="http://baibrisc.github.io/about-me/work.html">Projects</a> // </li>
+<li><a href="http://baibrisc.github.io/projects/">Projects</a> // </li>
 </ul>
 </div>
 
