updated project link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <ul>
 <li><a href="http://baibrisc.github.io/">Home</a> //</li>
 <li>About Me //</li> 
-<li><a href="work.html">Projects</a> //</li> 
+<li><a href="http://baibrisc.github.io/projects/">Projects</a> //</li> 
 </ul>
 </div>
 
